fixed text response alignment and button centering issues

--- a/main.css
+++ b/main.css
@@ -8,13 +8,11 @@
     --heading: #D96B62; /* burnt sienna - headings, borders */
     --label: #A65656; /* brick red - tags, labels */
 }
-
 * {
     margin: 0; /* reset margin and padding */
     padding: 0;
     box-sizing: border-box; /* ensures all elements are border-box */
 }
-
 html, body {
     min-height: 100%;
     font-family: var(--bodyfont);
@@ -22,7 +20,6 @@ html, body {
     background-color: var(--background);
     color: var(--mainText);
 }
-
 h1 {
     font-family: var(--headerfont);
     color: var(--heading);
@@ -30,73 +27,76 @@ h1 {
     padding: 3rem;
     font-size: 3rem;
 }
-
 .container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 1.5rem;
-    max-width: 800px;
+    max-width: 45rem;
     height: auto;
     margin: 0 auto;
-    padding: .5rem;
-    text-align: center;
+    padding: .25rem;
+    /*text-align: center;*/
 }
-
 section {
     height: auto;
     background-color: var(--button);
-    padding: 2rem;
-    border: solid 2px var(--button);
-    border-radius: 20px;
+    padding: 1.5rem;
+    border: dashed 2px var(--heading);
+    border-radius: 1.25rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+article {
+    color: var(--mainText);
+    text-align: center;
+    word-break: break-word;
+}
+input {
+    background-color: var(--mainText);
+    padding: .5rem;
+    /*margin: 1rem;*/
+    width: 100%;
+    border-color: var(--hover);
+    border-radius: 1.5rem;
+}
+.input-container { /* these next three classes are for inputs/buttons that are side by side*/
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    /*border: 1px solid #000;*/
+    margin: .25rem;
+}
+.button-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-}
-input {
-    background-color: lightgray;
-    padding: .5rem;
-    margin: 1rem;
-    width: 90%;
-    border-color: var(--mainText);
-    border-radius: 1.5rem;
-}
-.input-container { /* these next two classes are for inputs that are side by side*/
-    display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
-}
-.input-side-by-side {
-    flex: 1;
-    margin-right: 1rem;
-}
-.button-container { /* these next two classes are for buttons to appear side by side*/
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    /*border: 1px solid #000;*/
+    margin: .25rem;
 }
 .side-by-side {
     flex: 1;
-    margin-right: 1rem;
+}
+.input-container p { /* the plus sign between two boxes */
+    display: flex;
+    align-items: center;
+    margin: .1rem;
 }
 button {
     background-color: var(--background);
-    color: var(--mainText);
-    border-color: var(--heading);
     padding: .5rem;
-    margin: .25rem;
-    min-width: 5rem;
-    border-radius: 1.25rem;
-    text-align: center;
-    text-decoration: none;
+    /*margin: 1rem;*/
+    width: 90%;
+    border-color: var(--hover);
+    border-radius: 1.5rem;
+    color: var(--mainText);
     font-size: 1rem;
     cursor: pointer;
 }
-
 button:hover {
     background-color: var(--hover);
 }
-
 .copy {
     background-color: var(--background);
 }
@@ -111,10 +111,9 @@ button:hover {
 }
 footer {
     background-color: var(--button);
-    font-size: 1rem;
-    text-align: center;
-    height: 2rem;
+    font-size: .75rem;
     display: flex;
     justify-content: center;
-    align-items: center;
+    margin-top: 3rem;
+    padding: .25rem;
 }
